--- a/private.css
+++ b/private.css
@@ -32,7 +32,13 @@ a{
 h1{
     text-align: center;
     color: #fff;
-    text-shadow: 5px 5px 30px #cacaca;
+    text-shadow: 5px 5px 100px #cacaca;
+}
+h3{
+    text-align: center;
+    color: #fcbc32;
+    font-family: 'Source Code Pro' sans-serif;
+    font-size: 2em;
 }
 
 .map{
@@ -91,33 +97,80 @@ h1{
 .container{
     padding: 0 7vw;
 }
-
-.info{
-    /* background-color: #aa33ff; */
+article {
+    margin: 2em 0;
     border: 1px solid #fff;
     border-radius: 10px;
     padding: 1vw 1vh;
+    /* text-align: center; */
 }
 
-/* .contact{
-    background-color: #3cc333;
-} */
+article .period{
+    font-weight: bold;
+}
+
+article .place{
+    padding: 0 20px;
+    font-size: 1.1em;
+    font-family: 'Roboto';
+}
+
+article .description{
+    padding: 0 30px;
+    font-family: 'Source Sans Pro';
+}
+
+article .description span::before{
+    content: '-';
+}
+
+.skills ul{
+    /* background-color: #323fff; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.skills ul li {
+    border-radius: 50%;
+    background-color: blue;
+    padding: 10px;
+    margin: 0 .1em;
+    transition: .3s ease;
+}
+
+.skills ul li:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+
+.info__body{
+    text-align: center;
+}
+
+.info__body__name{
+    font-size: 1.4em;
+    color: #e3ff0f;
+}
 
 .contact ul {
-    /* display: inline-block; */
-    /* justify-content: center;
-    align-items: center; */
+    align-items: center;
+    justify-content: center;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .contact ul li {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: .3s ease;
 }
 
 .contact ul li:hover a{
-    color: #acc399;
+    color: #fa7248;
 }
 
 .contact ul li:hover .material-icons-outlined{
@@ -149,6 +202,22 @@ h1{
     text-shadow: 0 0 40px #fff;
 }
 
+.info ~article ul{
+    padding: 0;
+    margin: 1vw;
+    border-left: 3px solid red;
+}
+
+/* .education ul{
+    
+}
+
+.experience ul {
+    padding: 0;
+    margin: 1vw;
+    border-left: 1px solid red;
+} */
+
 @keyframes shake{
     0% { transform: translate(1px, 1px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
@@ -161,4 +230,44 @@ h1{
   80% { transform: translate(-1px, -1px) rotate(1deg); }
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+@media only screen and (max-width: 600px) {
+    *{
+        font-size: 13px;
+    }
+
+    article{
+        padding: 0;
+    }
+     
+    .skills ul{
+        display: flex;
+        /* justify-content: center; */
+        padding:0;
+        margin: 0;
+    }
+    .skills ul li{
+        border-radius: 10px;
+        padding: 1px;
+        margin: 1px;
+    }
+
+    .contact ul {
+        display: flex;
+        padding:0;
+        margin: 0;
+        /* align-items: baseline; */
+    }
+
+    .info__body{
+        text-align: left;
+    }
+
+    .info ~article ul{
+        padding: 0;
+        /* margin: 1vw; */
+        border: none;
+    }
+    
 }
